# simple-framebuffer

./: CMakeLists.txt  README.md
assets/: test
include/: bitframe_context.h
src/: audio_decode.c  bitframe_context.c  main.c
